--- a/frontend/templates/account.html
+++ b/frontend/templates/account.html
@@ -22,8 +22,8 @@
             </div>
             <div class="col-auto">
                 <p class="text-secondary">{{ current_user.email }}</p>
-                <p><a href="{{url_for('auth.change_password')}}" class="text-secondary"">Change Password</a></p>
-                <p><a href="{{url_for('auth.remove_account_confirm')}}" class="text-secondary"">Delete account</a></p>
+                <p><a href="{{url_for('auth.change_password')}}" class="text-secondary">Change Password</a></p>
+                <p><a href="{{url_for('auth.remove_account_confirm')}}" class="text-secondary">Delete account</a></p>
             </div>
         </div>
     </div>
@@ -33,10 +33,10 @@
 <section class="page-section pt-5">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-12 col-lg-6">
+            <div class="col-12 col-lg-6" data-aos="zoom-in">
                 {% include "_data_packs_list.html" %}
             </div>
-            <div class="col-12 col-lg-6 mt-5 mt-lg-0">
+            <div class="col-12 col-lg-6 mt-5 mt-lg-0" data-aos="zoom-in">
                 {% include "_collations_list.html" %}
             </div>
         </div>
