--- a/frontend/templates/collation.html
+++ b/frontend/templates/collation.html
@@ -11,7 +11,7 @@
         </div>
         <div class="text-center">
             <span class="mr-3"><a href="" data-toggle="modal" data-target="#rename-collation-modal" class="text-secondary">rename</a></span>
-            <span class="ml-3"><a href="{{ url_for('main.remove_pack_confirm', id=collation.id) }}" class="text-secondary">remove</a></span>
+            <span class="ml-3"><a href="{{ url_for('main.remove_collation_confirm', id=collation.id) }}" class="text-secondary">remove</a></span>
         </div>
     </div>
 </section>
