--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -53,7 +53,7 @@
         <div class="row justify-content-center">
             <div class="col-12 col-md-6 mb-5">
                 <div class="portfolio-item mx-auto">
-                    <img class="img-fluid" src="{{ m.static('images/foo.png') }}" data-aos="fade-left"/>
+                    <img class="img-fluid" src="{{ m.static('images/foo.png') }}" data-aos="fade-left" data-aos-duration="1000"/>
                 </div>
             </div>
             <div class="col-12 col-md-6 mb-5">
@@ -65,7 +65,7 @@
         <div class="row justify-content-center">
             <div class="col-12 col-md-6 mb-5  order-md-2">
                 <div class="portfolio-item mx-auto">
-                    <img class="img-fluid" src="{{ m.static('images/foo.png') }}" data-aos="fade-right"/>
+                    <img class="img-fluid" src="{{ m.static('images/foo.png') }}" data-aos="fade-right" data-aos-duration="1000"/>
                 </div>
             </div>
             <div class="col-12 col-md-6 mb-5 order-md-1">
@@ -96,7 +96,7 @@
         <div class="row justify-content-center">
             <div class="col-12 col-md-6 mb-5">
                 <div class="portfolio-item mx-auto">
-                    <img class="img-fluid" src="{{ m.static('images/foo.png') }}" data-aos="fade-left"/>
+                    <img class="img-fluid" src="{{ m.static('images/foo.png') }}" data-aos="fade-left" data-aos-duration="1000"/>
                 </div>
             </div>
             <div class="col-12 col-md-6 mb-5">
