--- a/frontend/templates/pack.html
+++ b/frontend/templates/pack.html
@@ -23,7 +23,7 @@
         {% endif %}
 
         <!-- Portfolio Grid Items-->
-        <div class="row justify-content-center mt-4">
+        <div class="row justify-content-center mt-4" data-aos="fade-up">
             <!-- Portfolio Item 1-->
             <div class="col-md-6 col-lg-3 mb-5">
                 <div class="portfolio-item mx-auto">
