--- a/frontend/templates/register.html
+++ b/frontend/templates/register.html
@@ -13,7 +13,7 @@
 
         <!-- Heading -->
         <div class="text-center">
-            <h2 class="page-section-heading text-secondary mb-0 d-inline-block">REGISTER</h2>
+            <h2 class="page-section-heading text-secondary mb-0 d-inline-block" data-aos="fade-up" data-aos-duration="500">REGISTER</h2>
         </div>
 
         <!-- Icon Divider-->
