--- a/frontend/templates/error.html
+++ b/frontend/templates/error.html
@@ -5,7 +5,7 @@
 {% block content %}
 <header class="masthead bg-primary text-white text-center mt-5" style="height: 100vh">
     <div class="container d-flex align-items-center flex-column">
-        <img id="uploadLogo" class="masthead-avatar mb-5 dz-clickable needsclick" src="{{ m.static('images/warning_sign.png') }}" alt="" data-aos="fade-down" data-aos-duration="1000">
+        <img id="uploadLogo" class="masthead-avatar mb-5 pt-5 mt-5 dz-clickable needsclick" src="{{ m.static('images/warning_sign.png') }}" alt="" data-aos="fade-down" data-aos-duration="1000">
 
         <!-- Title-->
         <h1 class="masthead-heading mb-4">{{ title }}</h1>
