--- a/frontend/templates/graphs_messages.html
+++ b/frontend/templates/graphs_messages.html
@@ -10,20 +10,20 @@
     <div class="container-fluid pt-4">
         <div class="row">
             <div class="col-12 col-lg-6">
-                <div class="text-center"><h2 class="page-section-heading text-secondary mb-0 d-inline-block">GRAPH 1</h2></div>
-                <embed type="image/svg+xml" src= {{ pack.get('graph1').data|safe }} />
+                <div class="text-center"><h2 class="page-section-heading text-secondary mb-0 d-inline-block">BAR CHART</h2></div>
+                <embed type="image/svg+xml" src= {{ pack.get(GraphName.EXAMPLE_BAR_CHART).data|safe }} />
             </div>
             <div class="col-12 col-lg-6">
-                <div class="text-center"><h2 class="page-section-heading text-secondary mb-0 d-inline-block">GRAPH 2</h2></div>
-                <embed type="image/svg+xml" src= {{ pack.get('graph1').data|safe }} />
+                <div class="text-center"><h2 class="page-section-heading text-secondary mb-0 d-inline-block">PIE CHART</h2></div>
+                <embed type="image/svg+xml" src= {{ pack.get(GraphName.EXAMPLE_PIE_CHART).data|safe }} />
             </div>
             <div class="col-12 col-lg-6">
-                <div class="text-center"><h2 class="page-section-heading text-secondary mb-0 d-inline-block">GRAPH 3</h2></div>
-                <embed type="image/svg+xml" src= {{ pack.get('graph1').data|safe }} />
+                <div class="text-center"><h2 class="page-section-heading text-secondary mb-0 d-inline-block">LINE CHART</h2></div>
+                <embed type="image/svg+xml" src= {{ pack.get(GraphName.EXAMPLE_LINE_CHART).data|safe }} />
             </div>
             <div class="col-12 col-lg-6">
-                <div class="text-center"><h2 class="page-section-heading text-secondary mb-0 d-inline-block">GRAPH 4</h2></div>
-                <embed type="image/svg+xml" src= {{ pack.get('graph1').data|safe }} />
+                <div class="text-center"><h2 class="page-section-heading text-secondary mb-0 d-inline-block">RADAR CHART</h2></div>
+                <embed type="image/svg+xml" src= {{ pack.get(GraphName.EXAMPLE_RADAR_CHART).data|safe }} />
             </div>
         </div>
     </div>
