--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -21,14 +21,14 @@
         </form>
 
         <!-- Icon Divider-->
-        <div class="divider-custom divider-light">
+        <div class="divider-custom divider-light mb-0">
             <div class="divider-custom-line"></div>
             <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
             <div class="divider-custom-line"></div>
         </div>
 
         <!-- Subheading-->
-        <p class="pre-wrap masthead-subheading font-weight-light">Let us analyse you data</p>
+        <p class="pre-wrap masthead-subheading font-weight-light mt-0">Let us analyse you data</p>
         <p>Or check sample output <a href="" class="text-white"><strong>here!</strong></a></p>
     </div>
 </header>
